tests/pos/Test000.hs
module Test000 () where

-- import Language.Haskell.Liquid.Prelude
{-@ toss :: Bool @-}
toss :: Bool
toss = (undefined 0) > 10

